# RiftRiddlerBot

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/: bot.py  logic.py
src/models/: Champion.py  Game.py  Player.py
