[tool.poetry]
name = "riftriddler"
version = "0.1.0"
description = ""
authors = ["Ruan Pablo <ruanpablocutrimramon@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
discord-py = "^2.5.2"
python-dotenv = "^1.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
